[package]
name = "pulseline"
description = "A simple single-string system monitor for the terminal with a per-core CPU histogram, CPU, RAM and battery percentages."
repository = "https://github.com/vimcommando/pulseline"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
battery = "0.7.8"
psutil = { version = "3.3.0", default-features = false, features = [
    "cpu",
    "memory",
] }
